--- a/covid19.html
+++ b/covid19.html
@@ -205,9 +205,9 @@
         </div>
     </footer>
 
-    <script src="/assets/jquery/dist/jquery.min.js"></script>
-    <script src="/assets/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="/assets/@fortawesome/fontawesome-free/js/all.min.js"></script>
+    <script src="assets/jquery/dist/jquery.min.js"></script>
+    <script src="assets/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="assets/@fortawesome/fontawesome-free/js/all.min.js"></script>
 </body>
 
 </html>
